--- a/eda-acetylcholinesterase-bioactivity.ipynb
+++ b/eda-acetylcholinesterase-bioactivity.ipynb
@@ -5272,7 +5272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "772e372e",
    "metadata": {},
    "outputs": [],
@@ -5282,7 +5282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1cbe0ef3",
    "metadata": {},
    "outputs": [],
@@ -5292,7 +5292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "813c2d2b",
    "metadata": {},
    "outputs": [
@@ -5509,7 +5509,7 @@
        "[6156 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5520,7 +5520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "399e6cf6",
    "metadata": {},
    "outputs": [],
@@ -5532,7 +5532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "b887da26",
    "metadata": {},
    "outputs": [
@@ -11706,7 +11706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "4761ef88",
    "metadata": {},
    "outputs": [
@@ -11766,7 +11766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "5decab48",
    "metadata": {},
    "outputs": [],
@@ -11776,7 +11776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "83334661",
    "metadata": {},
    "outputs": [],
@@ -11786,7 +11786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "9fbc6773",
    "metadata": {},
    "outputs": [
@@ -12160,7 +12160,7 @@
        "[6156 rows x 882 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12171,7 +12171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "2a33eef5",
    "metadata": {},
    "outputs": [],
@@ -12181,7 +12181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "3b285893",
    "metadata": {},
    "outputs": [
@@ -12555,7 +12555,7 @@
        "[6156 rows x 881 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12582,7 +12582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "8649a1fb",
    "metadata": {},
    "outputs": [],
@@ -12592,7 +12592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "6ed8fda6",
    "metadata": {},
    "outputs": [
@@ -12613,7 +12613,7 @@
        "Name: pIC50, Length: 6156, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12632,7 +12632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "942fa15f",
    "metadata": {},
    "outputs": [],
@@ -12642,7 +12642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "ff86c952",
    "metadata": {},
    "outputs": [
@@ -12667,7 +12667,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
        "      <th>PubchemFP0</th>\n",
        "      <th>PubchemFP1</th>\n",
        "      <th>PubchemFP2</th>\n",
@@ -12677,6 +12676,7 @@
        "      <th>PubchemFP6</th>\n",
        "      <th>PubchemFP7</th>\n",
        "      <th>PubchemFP8</th>\n",
+       "      <th>PubchemFP9</th>\n",
        "      <th>...</th>\n",
        "      <th>PubchemFP872</th>\n",
        "      <th>PubchemFP873</th>\n",
@@ -12693,7 +12693,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CHEMBL130478</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -12703,6 +12702,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12717,7 +12717,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CHEMBL336398</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12727,6 +12726,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12741,7 +12741,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CHEMBL133897</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12751,6 +12750,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12765,7 +12765,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CHEMBL130112</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12775,6 +12774,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12789,7 +12789,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CHEMBL130098</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -12799,6 +12798,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12837,7 +12837,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6151</th>\n",
-       "      <td>CHEMBL5218447</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12847,6 +12846,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12861,7 +12861,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6152</th>\n",
-       "      <td>CHEMBL5219046</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12871,6 +12870,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12885,7 +12885,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6153</th>\n",
-       "      <td>CHEMBL5220375</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12895,6 +12894,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12909,7 +12909,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6154</th>\n",
-       "      <td>CHEMBL5219958</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12919,6 +12918,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12933,7 +12933,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6155</th>\n",
-       "      <td>CHEMBL5220884</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -12943,6 +12942,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -12957,37 +12957,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6156 rows × 883 columns</p>\n",
+       "<p>6156 rows × 882 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Name  PubchemFP0  PubchemFP1  PubchemFP2  PubchemFP3  \\\n",
-       "0      CHEMBL130478           1           1           0           0   \n",
-       "1      CHEMBL336398           1           1           1           0   \n",
-       "2      CHEMBL133897           1           1           1           0   \n",
-       "3      CHEMBL130112           1           1           1           0   \n",
-       "4      CHEMBL130098           1           1           0           0   \n",
-       "...             ...         ...         ...         ...         ...   \n",
-       "6151  CHEMBL5218447           1           1           1           0   \n",
-       "6152  CHEMBL5219046           1           1           1           0   \n",
-       "6153  CHEMBL5220375           1           1           1           1   \n",
-       "6154  CHEMBL5219958           1           1           1           0   \n",
-       "6155  CHEMBL5220884           1           1           1           0   \n",
+       "      PubchemFP0  PubchemFP1  PubchemFP2  PubchemFP3  PubchemFP4  PubchemFP5  \\\n",
+       "0              1           1           0           0           0           0   \n",
+       "1              1           1           1           0           0           0   \n",
+       "2              1           1           1           0           0           0   \n",
+       "3              1           1           1           0           0           0   \n",
+       "4              1           1           0           0           0           0   \n",
+       "...          ...         ...         ...         ...         ...         ...   \n",
+       "6151           1           1           1           0           0           0   \n",
+       "6152           1           1           1           0           0           0   \n",
+       "6153           1           1           1           1           0           0   \n",
+       "6154           1           1           1           0           0           0   \n",
+       "6155           1           1           1           0           0           0   \n",
        "\n",
-       "      PubchemFP4  PubchemFP5  PubchemFP6  PubchemFP7  PubchemFP8  ...  \\\n",
-       "0              0           0           0           0           0  ...   \n",
-       "1              0           0           0           0           0  ...   \n",
-       "2              0           0           0           0           0  ...   \n",
-       "3              0           0           0           0           0  ...   \n",
-       "4              0           0           0           0           0  ...   \n",
-       "...          ...         ...         ...         ...         ...  ...   \n",
-       "6151           0           0           0           0           0  ...   \n",
-       "6152           0           0           0           0           0  ...   \n",
-       "6153           0           0           0           0           0  ...   \n",
-       "6154           0           0           0           0           0  ...   \n",
-       "6155           0           0           0           0           0  ...   \n",
+       "      PubchemFP6  PubchemFP7  PubchemFP8  PubchemFP9  ...  PubchemFP872  \\\n",
+       "0              0           0           0           1  ...             0   \n",
+       "1              0           0           0           1  ...             0   \n",
+       "2              0           0           0           1  ...             0   \n",
+       "3              0           0           0           1  ...             0   \n",
+       "4              0           0           0           1  ...             0   \n",
+       "...          ...         ...         ...         ...  ...           ...   \n",
+       "6151           0           0           0           1  ...             0   \n",
+       "6152           0           0           0           1  ...             0   \n",
+       "6153           0           0           0           1  ...             0   \n",
+       "6154           0           0           0           1  ...             0   \n",
+       "6155           0           0           0           1  ...             0   \n",
        "\n",
-       "      PubchemFP872  PubchemFP873  PubchemFP874  PubchemFP875  PubchemFP876  \\\n",
+       "      PubchemFP873  PubchemFP874  PubchemFP875  PubchemFP876  PubchemFP877  \\\n",
        "0                0             0             0             0             0   \n",
        "1                0             0             0             0             0   \n",
        "2                0             0             0             0             0   \n",
@@ -13000,23 +13000,23 @@
        "6154             0             0             0             0             0   \n",
        "6155             0             0             0             0             0   \n",
        "\n",
-       "      PubchemFP877  PubchemFP878  PubchemFP879  PubchemFP880     pIC50  \n",
-       "0                0             0             0             0  6.124939  \n",
-       "1                0             0             0             0  7.000000  \n",
-       "2                0             0             0             0  4.301030  \n",
-       "3                0             0             0             0  6.522879  \n",
-       "4                0             0             0             0  6.096910  \n",
-       "...            ...           ...           ...           ...       ...  \n",
-       "6151             0             0             0             0  9.679854  \n",
-       "6152             0             0             0             0  6.562249  \n",
-       "6153             0             0             0             0  4.118045  \n",
-       "6154             0             0             0             0  4.259637  \n",
-       "6155             0             0             0             0  5.267606  \n",
+       "      PubchemFP878  PubchemFP879  PubchemFP880     pIC50  \n",
+       "0                0             0             0  6.124939  \n",
+       "1                0             0             0  7.000000  \n",
+       "2                0             0             0  4.301030  \n",
+       "3                0             0             0  6.522879  \n",
+       "4                0             0             0  6.096910  \n",
+       "...            ...           ...           ...       ...  \n",
+       "6151             0             0             0  9.679854  \n",
+       "6152             0             0             0  6.562249  \n",
+       "6153             0             0             0  4.118045  \n",
+       "6154             0             0             0  4.259637  \n",
+       "6155             0             0             0  5.267606  \n",
        "\n",
-       "[6156 rows x 883 columns]"
+       "[6156 rows x 882 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13027,7 +13027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "3e593066",
    "metadata": {},
    "outputs": [],
